fix(news): increase font size on mobile

--- a/themes/shiro/assets/src/sass/css/scss/_wysiwyg.scss
+++ b/themes/shiro/assets/src/sass/css/scss/_wysiwyg.scss
@@ -15,7 +15,7 @@
 .single-post .wysiwyg li,
 .single-post .wysiwyg p {
 	font-family: 'Linux Libertine', 'Georgia', 'Times', serif;
-	@include font-size(18, 14);
+	@include font-size(18, 16);
 	line-height: 31px;
 }
 
